--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 overflow: auto;
                 background-color: rgba(0,0,0,0.9); */
                 background-color: rgba(0, 0, 0, 0.9);
-                display: flex;
+                display: none;
                 align-items: center;
                 justify-content: center;
                 /* display: flex;
