--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
                         </div>
                         <!-- 이미지 클릭하면 모달 열림 -->
                         <div style="border: 2px solid #FFA500; display: inline-block; padding: 5px;">
-                            <img src="project2-image2.JPG" class="mr-3" alt="Introduction of Topic" style="max-width: 500px; max-height: 300px;" onclick="openModal(this);">
+                            <img src="project2-image2.jpg" class="mr-3" alt="Introduction of Topic" style="max-width: 500px; max-height: 300px;" onclick="openModal(this);">
                         </div>
                         <!-- 이미지 클릭하면 모달 열림 -->
                         <div style="border: 2px solid #FFA500; display: inline-block; padding: 5px;">
@@ -217,7 +217,7 @@
                         </div>
                         <!-- 이미지 클릭하면 모달 열림 -->
                         <div style="border: 2px solid #FFA500; display: inline-block; padding: 5px;">
-                            <img src="project2-image4.JPG" class="mr-3" alt="System concept diagram" style="max-width: 500px; max-height: 300px;" onclick="openModal(this);">
+                            <img src="project2-image4.jpg" class="mr-3" alt="System concept diagram" style="max-width: 500px; max-height: 300px;" onclick="openModal(this);">
                         </div>                        
                         <div class="media-body">
                             <h3 class="custom-font-no-trans mt-2">SeeHealth
@@ -239,7 +239,7 @@
                         </div>
                         <!-- 이미지 클릭하면 모달 열림 -->
                         <div style="border: 2px solid #FFA500; display: inline-block; padding: 5px;">
-                            <img src="project3-image2.JPG" class="mr-3" alt="Applied Technologies" style="max-width: 500px; max-height: 300px;" onclick="openModal(this);">
+                            <img src="project3-image2.jpg" class="mr-3" alt="Applied Technologies" style="max-width: 500px; max-height: 300px;" onclick="openModal(this);">
                         </div>
                         <!-- 이미지 클릭하면 모달 열림 -->
                         <div style="border: 2px solid #FFA500; display: inline-block; padding: 5px;">
@@ -247,7 +247,7 @@
                         </div>
                         <!-- 이미지 클릭하면 모달 열림 -->
                         <div style="border: 2px solid #FFA500; display: inline-block; padding: 5px;">
-                            <img src="project3-image4.JPG" class="mr-3" alt="Result" style="max-width: 500px; max-height: 300px;" onclick="openModal(this);">
+                            <img src="project3-image4.jpg" class="mr-3" alt="Result" style="max-width: 500px; max-height: 300px;" onclick="openModal(this);">
                         </div>                        
                         <div class="media-body">
                             <h3 class="custom-font-no-trans mt-2">Human following robots, Apple harvesting robots
