--- a/index.html
+++ b/index.html
@@ -116,8 +116,8 @@
                         Hello, my name is Jae-sung Han. I am a student who wants to do excellent research that can contribute to the world based on my expertise.
 
                         My hobby is playing basketball and guitar, and I sometimes enjoy solving algorithmic problems on 
-                        <a href="https://leetcode.com/jaesunghan" target="_blank">leetcode</a>
-                        . My research interests are computer vision, machine learning, and human-computer interaction.
+                        <a href="https://leetcode.com/jaesunghan" target="_blank">leetcode.</a>
+                        <br> My research interests are computer vision, machine learning, and human-computer interaction.
                     </p>
                 </div>
             </section>
