--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                         </div>
                         <!-- 이미지 클릭하면 모달 열림 -->
                         <div style="border: 2px solid #FFA500; display: inline-block; padding: 5px;">
-                            <img src="project1-image2.JPG" class="mr-3" alt="Key features" style="max-width: 500px; max-height: 300px;" onclick="openModal(this);">
+                            <img src="project1-image2.jpg" class="mr-3" alt="Key features" style="max-width: 500px; max-height: 300px;" onclick="openModal(this);">
                         </div>
                         <!-- 모달 -->
                         <div id="myModal" class="modal">
