--- a/index.html
+++ b/index.html
@@ -178,11 +178,11 @@
                     
                     <div class="media mb-5">
                         <!-- 이미지 클릭하면 모달 열림 -->
-                        <div style="border: 2px solid #FFA500; display: inline-block; padding: 5px;">
+                        <div style="border: 2px solid #ffffff; display: inline-block; padding: 5px;">
                             <img src="project1-image1.jpg" class="mr-3" alt="System concept diagram" style="max-width: 500px; max-height: 300px;" onclick="openModal(this);">
                         </div>
                         <!-- 이미지 클릭하면 모달 열림 -->
-                        <div style="border: 2px solid #FFA500; display: inline-block; padding: 5px;">
+                        <div style="border: 2px solid #ffffff; display: inline-block; padding: 5px;">
                             <img src="project1-image2.jpg" class="mr-3" alt="Key features" style="max-width: 500px; max-height: 300px;" onclick="openModal(this);">
                         </div>
                         <!-- 모달 -->
@@ -204,19 +204,19 @@
 
                     <div class="media mb-5">
                         <!-- 이미지 클릭하면 모달 열림 -->
-                        <div style="border: 2px solid #FFA500; display: inline-block; padding: 5px;">
+                        <div style="border: 2px solid #ffffff ; display: inline-block; padding: 5px;">
                             <img src="project2-image1.jpg" class="mr-3" alt="The reason for creating SeeHealth" style="max-width: 500px; max-height: 300px;" onclick="openModal(this);">
                         </div>
                         <!-- 이미지 클릭하면 모달 열림 -->
-                        <div style="border: 2px solid #FFA500; display: inline-block; padding: 5px;">
+                        <div style="border: 2px solid #ffffff ; display: inline-block; padding: 5px;">
                             <img src="project2-image2.jpg" class="mr-3" alt="Introduction of Topic" style="max-width: 500px; max-height: 300px;" onclick="openModal(this);">
                         </div>
                         <!-- 이미지 클릭하면 모달 열림 -->
-                        <div style="border: 2px solid #FFA500; display: inline-block; padding: 5px;">
+                        <div style="border: 2px solid #ffffff ; display: inline-block; padding: 5px;">
                             <img src="project2-image3.jpg" class="mr-3" alt="Applied Technologies" style="max-width: 500px; max-height: 300px;" onclick="openModal(this);">
                         </div>
                         <!-- 이미지 클릭하면 모달 열림 -->
-                        <div style="border: 2px solid #FFA500; display: inline-block; padding: 5px;">
+                        <div style="border: 2px solid #ffffff ; display: inline-block; padding: 5px;">
                             <img src="project2-image4.jpg" class="mr-3" alt="System concept diagram" style="max-width: 500px; max-height: 300px;" onclick="openModal(this);">
                         </div>                        
                         <div class="media-body">
@@ -235,19 +235,19 @@
 
                     <div class="media mb-5">
                         <!-- 이미지 클릭하면 모달 열림 -->
-                        <div style="border: 2px solid #FFA500; display: inline-block; padding: 5px;">
+                        <div style="border: 2px solid #ffffff; display: inline-block; padding: 5px;">
                             <img src="project3-image1.jpg" class="mr-3" alt="Project description" style="max-width: 500px; max-height: 300px;" onclick="openModal(this);">
                         </div>
                         <!-- 이미지 클릭하면 모달 열림 -->
-                        <div style="border: 2px solid #FFA500; display: inline-block; padding: 5px;">
+                        <div style="border: 2px solid #ffffff; display: inline-block; padding: 5px;">
                             <img src="project3-image2.jpg" class="mr-3" alt="Applied Technologies" style="max-width: 500px; max-height: 300px;" onclick="openModal(this);">
                         </div>
                         <!-- 이미지 클릭하면 모달 열림 -->
-                        <div style="border: 2px solid #FFA500; display: inline-block; padding: 5px;">
+                        <div style="border: 2px solid #ffffff; display: inline-block; padding: 5px;">
                             <img src="project3-image3.jpg" class="mr-3" alt="Scenarios" style="max-width: 500px; max-height: 300px;" onclick="openModal(this);">
                         </div>
                         <!-- 이미지 클릭하면 모달 열림 -->
-                        <div style="border: 2px solid #FFA500; display: inline-block; padding: 5px;">
+                        <div style="border: 2px solid #ffffff; display: inline-block; padding: 5px;">
                             <img src="project3-image4.jpg" class="mr-3" alt="Result" style="max-width: 500px; max-height: 300px;" onclick="openModal(this);">
                         </div>                        
                         <div class="media-body">
@@ -265,19 +265,19 @@
 
                     <div class="media mb-5">
                         <!-- 이미지 클릭하면 모달 열림 -->
-                        <div style="border: 2px solid #FFA500; display: inline-block; padding: 5px;">
+                        <div style="border: 2px solid #ffffff; display: inline-block; padding: 5px;">
                             <img src="project4-image1.jpg" class="mr-3" alt="Project description" style="max-width: 500px; max-height: 300px;" onclick="openModal(this);">
                         </div>
                         <!-- 이미지 클릭하면 모달 열림 -->
-                        <div style="border: 2px solid #FFA500; display: inline-block; padding: 5px;">
+                        <div style="border: 2px solid #ffffff; display: inline-block; padding: 5px;">
                             <img src="project4-image2.jpg" class="mr-3" alt="Applied Technologies" style="max-width: 500px; max-height: 300px;" onclick="openModal(this);">
                         </div>
                         <!-- 이미지 클릭하면 모달 열림 -->
-                        <div style="border: 2px solid #FFA500; display: inline-block; padding: 5px;">
+                        <div style="border: 2px solid #ffffff; display: inline-block; padding: 5px;">
                             <img src="project4-image3.jpg" class="mr-3" alt="Scenarios" style="max-width: 500px; max-height: 300px;" onclick="openModal(this);">
                         </div>
                         <!-- 이미지 클릭하면 모달 열림 -->
-                        <div style="border: 2px solid #FFA500; display: inline-block; padding: 5px;">
+                        <div style="border: 2px solid #ffffff; display: inline-block; padding: 5px;">
                             <img src="project4-image4.jpg" class="mr-3" alt="Result" style="max-width: 500px; max-height: 300px;" onclick="openModal(this);">
                         </div>                        
                         <div class="media-body">
@@ -294,19 +294,19 @@
 
                     <div class="media mb-5">
                         <!-- 이미지 클릭하면 모달 열림 -->
-                        <div style="border: 2px solid #FFA500; display: inline-block; padding: 5px;">
+                        <div style="border: 2px solid #ffffff; display: inline-block; padding: 5px;">
                             <img src="project5-image1.jpg" class="mr-3" alt="Project description" style="max-width: 500px; max-height: 300px;" onclick="openModal(this);">
                         </div>
                         <!-- 이미지 클릭하면 모달 열림 -->
-                        <div style="border: 2px solid #FFA500; display: inline-block; padding: 5px;">
+                        <div style="border: 2px solid #ffffff; display: inline-block; padding: 5px;">
                             <img src="project5-image2.jpg" class="mr-3" alt="Applied Technologies" style="max-width: 500px; max-height: 300px;" onclick="openModal(this);">
                         </div>
                         <!-- 이미지 클릭하면 모달 열림 -->
-                        <div style="border: 2px solid #FFA500; display: inline-block; padding: 5px;">
+                        <div style="border: 2px solid #ffffff; display: inline-block; padding: 5px;">
                             <img src="project5-image3.jpg" class="mr-3" alt="Scenarios" style="max-width: 500px; max-height: 300px;" onclick="openModal(this);">
                         </div>
                         <!-- 이미지 클릭하면 모달 열림 -->
-                        <div style="border: 2px solid #FFA500; display: inline-block; padding: 5px;">
+                        <div style="border: 2px solid #ffffff; display: inline-block; padding: 5px;">
                             <img src="project5-image4.jpg" class="mr-3" alt="Result" style="max-width: 500px; max-height: 300px;" onclick="openModal(this);">
                         </div>                        
                         <div class="media-body">
