Updated index file

--- a/index.html
+++ b/index.html
@@ -116,8 +116,8 @@
                         Hello, my name is Jae-sung Han. I am a student who wants to do excellent research that can contribute to the world based on my expertise.
 
                         My hobby is playing basketball and guitar, and I sometimes enjoy solving algorithmic problems on 
-                        <a href="https://leetcode.com/jaesunghan" target="_blank">leetcode.</a>
-                        <br> My research interests are computer vision, machine learning, and human-computer interaction.
+                        <a href="https://leetcode.com/jaesunghan" target="_blank">leetcode</a> from time to time.
+                        My research interests are computer vision, machine learning, and human-computer interaction.
                     </p>
                 </div>
             </section>
@@ -256,7 +256,8 @@
                             <p class="custom-font-sub mt-0">
                                 Duration: Jul. 2023 ~ Aug. 2023<br>research topic for internship @ ETRI
                             </p>
-                            <p class="custom-font-sub-no-trans mt-0">I conducted research on training lightweight deep learning models for object detection. These models are deep learning object detection models to be used in apple harvesting robots and human-following robots.
+                            <p class="custom-font-sub-no-trans mt-0">Human-following robots can be applied in various industries such as librarian robots, logistics robots. <br>
+                                I Trained a lightweight detection model using YOLO v8 nano and implemented detection and tracking algorithms, utilized ROS for robot control.
                                 
                             </p>
                         </div>
@@ -286,7 +287,8 @@
                             <p class="custom-font-sub mt-0">
                                 Duration: Oct. 2023<br>Personal project
                             </p>
-                            <p class="custom-font-sub-no-trans mt-0">Eye-Controlled Keyboard Assistance Program using Intel OpenVINO Deep Learning Model
+                            <p class="custom-font-sub-no-trans mt-0">Eyeboard is a program that could help you to type keyboard using your eyes.
+                                I Developed by myself as a personal project, applied gaze-estimation model supported by Intel open-model-zoo. You can see a brief demo video <a href="https://drive.google.com/file/d/1yKe6qFne-0HeNzOe9iZPC_g-FutmzfFH/view" target="_blank">here</a>.
                             </p>
                         </div>
 
@@ -315,7 +317,8 @@
                             <p class="custom-font-sub mt-0">
                                 Duration: Sep. 2023 ~ Current<br>Course Project for 'Capstone Design Project 2' @ KNU
                             </p>
-                            <p class="custom-font-sub-no-trans mt-0">AInterview : AI Providing Anticipated Interview Questions and Model Answers! 
+                            <p class="custom-font-sub-no-trans mt-0">AInterview is an website that AI Provides Anticipated Interview Questions and Answers.
+                                I am Responsible for Front-end, using React and Figma to make website.
                             </p>
                         </div>
                     </div>
