--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 
                         My hobby is playing basketball and guitar, and I sometimes enjoy solving algorithmic problems on 
                         <a href="https://leetcode.com/jaesunghan" target="_blank">leetcode</a> from time to time.
-                        My research interests are computer vision, machine learning, and human-computer interaction.
+                        I have broad interests in the world of Computer Science!
                     </p>
                 </div>
             </section>
@@ -129,7 +129,7 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="custom-font mb-0">Research Intern</h3>
-                            <div class="custom-font-sub mb-3">ETRI</div>
+                            <div class="custom-font-sub mb-3">Robot IT Convergence, ETRI</div>
                             <p>Served as an assistant to train lightweight object detection models for Human Following robot.</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">Jul. 2023 – Aug. 2023</span></div>
@@ -137,10 +137,18 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="custom-font mb-0">Teaching assistant</h3>
-                            <div class="custom-font-sub mb-3">System Programming class @ KNU</div>
+                            <div class="custom-font-sub mb-3">System Programming class, Kyungpook National University</div>
                             <p>Taught students how to write programs at the Linux system call level.</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">Mar. 2023 – Jun. 2023</span></div>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="custom-font mb-0">Military Service</h3>
+                            <div class="custom-font-sub mb-3">Osan Air Base, Republic of Korea Air Force</div>
+                            <p>Served as a computer specialist in the military, providing technical support and assisting in mission-related tasks.</p>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">May. 2021 - Feb. 2023</span></div>
                     </div>
                 </div>
             </section>
