--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 
                     </div>
                     <p class="lead mb-5">
-                        Hello, my name is Jae-sung Han. I am a student who wants to do excellent research that can contribute to the world based on my expertise.
+                        Hello, my name is Jae-sung Han. I am a software developer who wants to do excellent research that can contribute to the world based on my expertise.
 
                         My hobby is playing basketball and guitar, and I sometimes enjoy solving algorithmic problems on 
                         <a href="https://leetcode.com/jaesunghan" target="_blank">leetcode</a> from time to time.
@@ -162,9 +162,9 @@
                         <div class="flex-grow-1">
                             <h3 class="custom-font mb-0">Kyungpook National University (Daegu, Korea)</h3>
                             <div class="custom-font-sub mb-0">School of Computer Science and Engineering</div>
-                            <p>GPA: 4.23 / 4.3</p>
+                            <p>GPA: 4.24 / 4.3, Graduated 1st in Class</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">Mar. 2020 – Present</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">Mar. 2020 – Feb. 2024</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
@@ -323,7 +323,7 @@
                             <h3 class="custom-font-no-trans mt-2">AInterview
                             </h3>
                             <p class="custom-font-sub mt-0">
-                                Duration: Sep. 2023 ~ Current<br>Course Project for 'Capstone Design Project 2' @ KNU
+                                Duration: Sep. 2023 ~ Dec. 2023<br>Course Project for 'Capstone Design Project 2' @ KNU
                             </p>
                             <p class="custom-font-sub-no-trans mt-0">AInterview is an website that AI Provides Anticipated Interview Questions and Answers.
                                 I am Responsible for Front-end, using React and Figma to make website.
